Fixes footer z-indexing.

--- a/src/scss/global/_body.scss
+++ b/src/scss/global/_body.scss
@@ -37,6 +37,6 @@ body {
     pointer-events: none;
     position: absolute;
     width: 100%;
-    z-index: -1;
+    z-index: -2;
   }
 }
