--- a/src/scss/global/_footer.scss
+++ b/src/scss/global/_footer.scss
@@ -2,7 +2,7 @@
 	position: sticky;
   bottom: 0;
   height: 50px;
-  z-index: -1;
+  z-index: 0;
 }
 
 .site-footer .menu {
