--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -10,7 +10,7 @@
 	pointer-events: none;
 	position: absolute;
 	width: 100%;
-	z-index: -1;
+	z-index: -2;
 	mix-blend-mode: luminosity;
 
 	@media #{$lake} {
@@ -21,7 +21,6 @@
 .home .main-content {
 	border: 0;
 	border-radius: 0;
-	position: relative;
 	width: 100%;
 
 	@media #{$lake} {
